--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1144,6 +1144,8 @@ ul.suggestions li > span > svg:first-child {
    font-size:0;
 }
 
+
+
 .App.tradition .tradi-content {
    margin-right:35px;
 }
@@ -2633,7 +2635,7 @@ a.result .contenu ul > div:last-child h3:is([lang$="-khmr"],[lang="km"]) { font-
    padding-left:16px; padding-right:16px; padding-bottom:140px; max-width:100%;box-shadow: 0 2px 10px #e2e2e2; box-sizing:border-box;
 }
 #samples { padding: 60px 0 ; width:910px;margin-right:0px; /*padding-left:37px; */ margin-bottom:75px; width:1220px;}
-#samples h3 { text-transform: uppercase; text-align: center; font-size:28px;margin:0 0 10px 0;}
+#samples > h3 { text-transform: uppercase; text-align: center; font-size:28px;margin:0 0 10px 0;}
 
 #results {  padding-bottom:75px;margin-bottom:75px;}
 
@@ -6124,6 +6126,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 .resource .data .sub .subsub a.propref { font-weight:400;letter-spacing:0px; font-size:14px;}
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
 
+.tradition .propref span { color:#343434; font-size:16px; font-weight:600; }
 
 div[role="tooltip"]#popHoverM > div > div { color:black; }
 
