--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -1547,10 +1547,12 @@ header[data-hits="0"] ~ .hits .pagination,
 }
 
 
+/*
 .etext-and-preview-not-available[data-rootid]::after {
   background:none !important;
   margin:5px 0px !important;
 }
+*/
 
 .etext-and-preview-not-available[data-rootid]+[data-prop="tmp:propHasEtext"]:not(.has-preview-true) h3 {
   visibility:hidden;
@@ -1565,7 +1567,7 @@ header[data-hits="0"] ~ .hits .pagination,
   background: rgba(0, 0, 0, 0.25);
 }
 
-.etext-and-preview-not-available:not([data-rootid])+[data-prop="tmp:propHasEtext"]:not(#a):not(#b) {
+.etext-and-preview-not-available:not([data-rootid])+[data-prop="tmp:propHasEtext"]:not(.etext-and-preview-not-available):not(#b) {
   display:none !important;
 }
 
