minor fix (buda-base/lds-pdi#254)

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5842,7 +5842,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
 .etextPage.unformated h4.page { white-space: normal;  }
 .etextPage h5 { margin-top:0; color:#777; display:inline-block; margin-bottom:10px;}
 
-.preview-etext .etext-data .etextPage h5 { margin-bottom:12px;}
+.preview-etext .etext-data .etextPage h5 { display:none; margin-bottom:12px;}
 
 .etextPage h4 + h5 { margin-top:15px;margin-bottom:30px;}
 .etextPage img.page, .etextPage h5 a, .etextPage .small a { cursor:pointer; } 
