--- a/src/lib/searchkit/App.css
+++ b/src/lib/searchkit/App.css
@@ -561,6 +561,16 @@ header[data-hits="0"] ~ .hits .pagination,
   /* color:#d73449; */
 }
 
+
+.AppSK .result .data .names.dates {
+  margin-top:-5px;
+  margin-bottom:2px;
+}
+
+.AppSK .result .data .names.dates .label:empty { 
+  display:none;
+}
+
 .AppSK .result:hover .data .names a:hover,
 .AppSK .result:hover .data > a .T + span:hover {
   text-decoration: underline;
