--- a/src/components/App.css
+++ b/src/components/App.css
@@ -319,6 +319,9 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 #root > div > :not(.static):first-child ~ .nav:not(.etext-nav).msgPopupOn::after { content:''; position: absolute; width:100%;height:100%;background:rgba(0,0,0,0.5); z-index: 1;}
 #root > div > :not(.static):first-child ~ .nav:not(.etext-nav).msgPopupOn { box-shadow: 0 2px 4px rgba(0,0,0,0.35); }
 
+#root > .profile.static:not(#a) > .nav:not(.etext-nav).msgPopupOn::after { content:none; }
+#root > .profile.static:not(#a) > .nav:not(.etext-nav).msgPopupOn { box-shadow:none;}
+
 .static-container > #samples > .doc-content { max-width:100%; padding-top:0; padding-bottom:100px;}
 .static .doc-content .index { position:fixed; width:310px; background:white; top:130px; padding:0; padding-top:0px; padding-bottom:40px;}
 .static .doc-content .index > div { height:calc(100vh - 80px - 50px /*- 40px*/); overflow: auto; box-sizing: border-box; padding-bottom:40px; box-sizing: border-box;}
@@ -4129,6 +4132,19 @@ div:has(.resource.preview) .infoPanel.inRes { margin:0 !important; }
 .resource.user .data#outline > .search h3 { font-weight:600;}
 .resource.user .data#outline .help { font-size:14px; margin-bottom:24px; margin-top:8px; font-weight:400;padding-left:2px;}
 
+
+#root > div > .resource.user { width:1440px; padding:0; }
+
+#root > div > .resource.user > .index { display:none; }
+
+#root > div > .resource.user > .index + div { margin:80px auto; width:1280px; }
+
+
+#root > div > .resource.user > .index + div .data#outline { padding: 0 60px 40px 60px; box-sizing: border-box; }
+
+.resource.user .data#outline > div { padding:25px 35px;}
+
+.resource.user .data#outline  div { width:100%; }
 
 /* .resource.user .data#outline .help + .widget > label > span:last-child { max-width: calc(100% - 190px - 20px); display: block; }   */
 
